# pkg/serve/controller/post/dto/create_post_request.go
@@ -5,12 +5,12 @@ package dto
 //	@Param	title				body	string	true	"文章标题"
 //	@Param	image				body	string	true	"文章图片(可选)"
 //	@Param	visibility			body	string	true	"文章可见性(可选,默认 private)"
-//	@Param	content_markdown	body	string	true	"文章内容(markdown格式)"
+//	@Param	content_html	    body	string	true	"文章内容(markdown格式)"
 //	@Param	category_ids		body	array	true	"文章分类ID列表"
 type CreateOnePostRequest struct {
-	Title           string  `json:"title" xml:"title" form:"title" query:"title" validate:"required,min=1,max=225"`
-	Image           string  `json:"image" xml:"image" form:"image" query:"image" default:""`
-	Visibility      string  `json:"visibility" xml:"visibility" form:"visibility" query:"visibility" default:"private"`
-	ContentMarkdown string  `json:"content_markdown" xml:"content_markdown" form:"content_markdown" query:"content_markdown" validate:"required"`
-	CategoryIDs     []int64 `json:"category_ids" xml:"category_ids" form:"category_ids" query:"category_ids" default:""`
+	Title       string  `json:"title" xml:"title" form:"title" query:"title" validate:"required,min=1,max=225"`
+	Image       string  `json:"image" xml:"image" form:"image" query:"image" default:""`
+	Visibility  string  `json:"visibility" xml:"visibility" form:"visibility" query:"visibility" default:"private"`
+	ContentHTML string  `json:"content_html" xml:"content_html" form:"content_html" query:"content_html" validate:"required" default:""`
+	CategoryIDs []int64 `json:"category_ids" xml:"category_ids" form:"category_ids" query:"category_ids" default:""`
 }
